--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "toprod": "ng build --prod --aot && firebase deploy --only hosting --project notes-8db5f",
     "test": "ng test"
   },
   "private": true,
@@ -32,7 +33,7 @@
     "@angular/compiler-cli": "~12.1.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "firebase-tools": "^8.0.0 || ^9.0.0",
+    "firebase-tools": "^9.14.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
